Committing changes so I can move autodoc_functions into new devkit subdir, and rename it as autodoc.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@191 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -77,6 +77,13 @@
 \input{autotext/esl_keyhash_functions}
 
 \newpage
+\section{\eslmod{mpi}: support for MPI parallelization}
+\input{../esl_mpi}
+\subsection{Functions in the mpi module}
+\input{autotext/esl_mpi_functions}
+\vspace*{\fill}
+
+\newpage
 \section{\eslmod{random}: pseudorandom numbers and sampling}
 \input{../esl_random}
 \subsection{Functions in the random (rnd) module}
@@ -334,7 +341,16 @@
 \input{autotext/esl_weibull_functions}
 
 
+\newpage
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{Interfaces to third-party libraries}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\newpage
+\section{\eslmod{mpi}: MPI parallelization}
+\input{../esl_mpi}
+\subsection{Functions in the MPI module}
+\input{autotext/esl_mpi_functions}
 
 
 
