devkit subdir added; Easel no longer depends on ssdk.
Easel unit test programs are now compiled by the testsuite/Makefile,
not by prep commands in testsuite.sqc; this makes it possible to
change the compiler. (Needed to do this, for MPI's mpicc.)

devkit/esl-dependencies script added; first step towards enabling auto
testing of standalone and augmented modules, in addition to full
library mode.

mpi module added; some minor MPI support, needed for work ongoing in
HMMER with hmmbuild, the first serious mpi application.

MPI communication functions added to msa module.

configure.ac synchronized with HMMER's, so that HMMER's configure
script can configure Easel by itself. aclocal.m4 added, copied from
HMMER.

xref J1/81


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@192 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_keyhash.tex
+++ b/esl_keyhash.tex
@@ -1,5 +1,5 @@
 
-The keyhash (key) module contains routines for emulating Perl
+The \eslmod{keyhash} (key) module contains routines for emulating Perl
 associative arrays, by associating keywords with an integer array
 index, and storing the association in a hash table for rapid access.
 
