--- a/esl_msa.tex
+++ b/esl_msa.tex
@@ -30,12 +30,12 @@ are available.
 \begin{center}
 {\small
 \begin{tabular}{|ll|}\hline
-\apisubhead{The ESL_MSA object                                           }\\
+\apisubhead{The ESL\_MSA object                                           }\\
 \hyperlink{func:esl_msa_Create()}{\ccode{esl\_msa\_Create()}} & Creates an \ccode{ESL\_MSA} object.\\
 \hyperlink{func:esl_msa_CreateFromString()}{\ccode{esl\_msa\_CreateFromString()}} & Creates a small \ccode{ESL\_MSA} from a test case string.\\
 \hyperlink{func:esl_msa_Destroy()}{\ccode{esl\_msa\_Destroy()}} & Frees an \ccode{ESL\_MSA}.\\
 \hyperlink{func:esl_msa_Expand()}{\ccode{esl\_msa\_Expand()}} & Reallocate for more sequences.\\
-\apisubhead{The ESL_MSAFILE object                                       }\\
+\apisubhead{The ESL\_MSAFILE object                                       }\\
 \hyperlink{func:esl_msafile_Open()}{\ccode{esl\_msafile\_Open()}} & Open an MSA file for input.\\
 \hyperlink{func:esl_msafile_Close()}{\ccode{esl\_msafile\_Close()}} & Closes an open MSA file.\\
 \hyperlink{func:esl_msafile_PositionByKey()}{\ccode{esl\_msafile\_PositionByKey()}} & Use SSI to reposition file to start of named MSA.\\
