'make etags' now makes a deeper TAGS file. esl_stats_Mean turned into esl_stats_{D,F}Mean(). esl_histplot miniapp outputs (commented) mu, lambda for fits.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@195 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_stats.tex
+++ b/esl_stats.tex
@@ -9,7 +9,7 @@ the \eslmod{stats} API.
 \begin{center}
 {\small
 \begin{tabular}{|ll|}\hline
-\hyperlink{func:esl_stats_Mean()}{\ccode{esl\_stats\_Mean()}} & Calculates mean and $\sigma^2$ for samples $x_i$.\\
+\hyperlink{func:esl_stats_DMean()}{\ccode{esl\_stats\_\{D,F,I\}Mean()}} & Calculates mean and $\sigma^2$ for samples $x_i$.\\
 \hyperlink{func:esl_stats_LogGamma()}{\ccode{esl\_stats\_LogGamma()}} & Calculates $\log \Gamma(x)$.\\
 \hyperlink{func:esl_stats_Psi()}{\ccode{esl\_stats\_Psi()}} & Calculates $\Psi(x)$ (the digamma function).\\
 \hyperlink{func:esl_stats_IncompleteGamma()}{\ccode{esl\_stats\_IncompleteGamma()}} & Calculates the incomplete Gamma function.
