--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -7,7 +7,12 @@ Copyright (C) 2004-2006 Washington University School of Medicine.\\
 
 \vspace{2em} 
 
-The Easel source code and documentation are freely redistributable and
-modifiable under the terms of the Janelia Farm Software License.
+Easel is freely redistributable and modifiable under the terms of the
+Janelia Software License.
+
+
+
+
+
 
 
