--- a/documentation/titlepage.tex
+++ b/documentation/titlepage.tex
@@ -7,7 +7,7 @@
 {\Huge{Easel}} \\ 
 \rule[2pt]{\textwidth}{1pt} \\
 \hspace*{\fill} {\large {A library of C functions for
-    biosequence analysis} \\ }
+    biological sequence analysis} \\ }
 
 \vspace*{\fill}
 
@@ -17,7 +17,7 @@ Version 0.1; May 2007 \\
 
 \vspace*{\fill}
 
-Sean Eddy\\
+Sean R. Eddy\\
 HHMI Janelia Farm Research Campus\\
 19700 Helix Drive\\
 Ashburn VA 20147\\
