--- a/esl_gumbel.tex
+++ b/esl_gumbel.tex
@@ -6,9 +6,9 @@ The Gumbel distribution is the so-called Type I extreme value
 distribution (EVD). It occurs so frequently in sequence analysis
 applications, compared to the type II (Fr\'{e}chet) and type III
 (Weibull) extreme value distributions, that ``Gumbel'' and ``EVD'' are
-often sloppily used interchangeably in bioinformatics. Easel has a
-separate module, the \eslmod{gev} module, that implements the
-generalized extreme value distribution.
+often used interchangeably in bioinformatics. Easel has a separate
+module, the \eslmod{gev} module, that implements the generalized
+extreme value distribution.
 
 Karlin/Altschul statistics are a special case of the Gumbel
 distribution that apply to the scores of ungapped local alignments
