--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -5,6 +5,12 @@
 \newcommand{\prog}[1]{{\smaller\textsc{#1}}}
 \newcommand{\eslmod}[1]{{\smaller\textsf{\textup{\textbf{#1}}}}}
 
+\newcommand{\Easel}   {{\smaller\textsc{easel}}}
+\newcommand{\HMMER}   {{\smaller\textsc{hmmer}}}
+\newcommand{\Infernal}{{\smaller\textsc{infernal}}}
+\newcommand{\Pfam}    {{\smaller\textsc{pfam}}}
+\newcommand{\Rfam}    {{\smaller\textsc{rfam}}}
+
 % \api* functions are for the API summary tables.
 \newcommand{\apisubhead}[1]{\multicolumn{2}{|c|}{\rule[-0.4em]{0em}{1.5em}\textbf{#1}}}
 
