--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -1,14 +1,15 @@
 \vspace*{\fill}
 \begin{flushleft}
-Copyright (C) 2004-2007 Sean R. Eddy.\\
-Copyright (C) 2006-2007 HHMI Janelia Farm Research Campus.\\
+Copyright (C) 2004-2008 Sean R. Eddy.\\
+Copyright (C) 2006-2008 HHMI Janelia Farm Research Campus.\\
 Copyright (C) 2004-2006 Washington University School of Medicine.\\
 \end{flushleft}
 
 \vspace{2em} 
 
-Easel is freely redistributable and modifiable under the terms of the
-Janelia Software License.
+Easel's source code and documentation are freely redistributable and
+modifiable under the terms of the Janelia Software License.
+
 
 
 
